# c2rust-build

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PUBLISHING.md  README.md  README_en.md  README_zh.md  _codeql_detected_source_root
.github/workflows/: publish.yml
hook/: build.sh  hook.c
src/: config_helper.rs  error.rs  executor.rs  file_selector.rs  git_helper.rs  interaction.rs  main.rs  preprocessor.rs  target_selector.rs  targets_processor.rs  tracker.rs
tests/: integration_test.rs
