[package]
name = "c2rust-build"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c2rust-build"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
git2 = "0.19"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
