[package]
name = "c2rust-build"
version = "0.1.0"
edition = "2021"
authors = ["LuuuXXX"]
description = "A command-line tool for executing C project build commands, tracing compiler invocations, preprocessing C files, and saving configuration using c2rust-config"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LuuuXXX/c2rust-build"
readme = "README.md"
keywords = ["c2rust", "build", "preprocessor", "c", "rust"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "c2rust-build"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
git2 = "0.19"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
