[package]
name = "c2rust-build"
version = "0.1.0"
edition = "2021"
authors = ["LuuuXXX"]
description = "C project build execution tool for c2rust workflow - tracks compiler calls, preprocesses C files, and saves configuration"
license = "MIT"
repository = "https://github.com/LuuuXXX/c2rust-build"
homepage = "https://github.com/LuuuXXX/c2rust-build"
documentation = "https://docs.rs/c2rust-build"
readme = "README.md"
keywords = ["c2rust", "c", "rust", "transpiler", "build"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "c2rust-build"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
git2 = "0.19"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
